# bosen

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README_java.txt  build.gradle  defns.mk  defns.mk.cogito  defns.mk.template  sync.sh
app/NMF/: CMakeLists.txt  Makefile
app/NMF/script/: kill.py  launch_on_yarn.py  make_synth_data.py  merge_data.py  partition_data.py  run_local.py
app/NMF/src/: NMFEngine.cpp  NMFEngine.hpp  matrix_loader.cpp  matrix_loader.hpp  nmf_main.cpp
app/dml/: CMakeLists.txt  Makefile
app/dml/script/: kill.py  run_local.py
app/dnn/: CMakeLists.txt  Makefile
app/dnn/script/: gen_data.sh  kill.py  launch.py  launch_pred.py  predict.py  run_local.py
app/dnn_speech/: CMakeLists.txt  myrun.sh
app/dnn_speech/datasets/: data_partition.txt  olddata_partition.txt  para_imnet.txt
app/dnn_speech/petuumdnn/: DNN_config.cc  Makefile  ark2txt.cc  bin2asc.cc  check.cc  egs2txt.cc  feature_extraction.cc  parse_head.cc  set_num_layers.cc  tot_extraction.cc
app/dnn_speech/scripts/: PrepDNNFeature.sh  gen_data.sh  run_dnn.sh  timit.sh  timit_decode.sh
app/kmeans/: CMakeLists.txt  Makefile  README.md
app/kmeans/dataset/: data_generate.py  sample.txt
app/kmeans/script/: kill.py  launch.py.template  run_local.py.template
app/kmeans/src/: cluster_centers.cpp  cluster_centers.h  dataset.cpp  dense_vector.cpp  kmeans.cpp  kmeans_main.cpp  kmeans_methods.h  kmeans_worker.cpp  kmeans_worker.h
app/mlr/: CMakeLists.txt  Makefile
app/mlr/datasets/: covtype.scale.test.small
app/mlr/script/: kill.py  launch.py  launch.py.template  run_gen_data.py  run_local.py.template
app/mlr/src/: abstract_mlr_sgd_solver.hpp  common.hpp  lr_sgd_solver.cpp  lr_sgd_solver.hpp  mlr_engine.cpp  mlr_engine.hpp  mlr_main.cpp  mlr_sgd_solver.cpp  mlr_sgd_solver.hpp
app/mlr_demo/: CMakeLists.txt  CMakeLists.txt~  Makefile
app/mlr_demo/script/: kill.py  launch.py.template  run_gen_data.py  run_gen_data.py~  run_local.py.template
app/mlr_demo/src/: common.hpp  mlr_app.cpp  mlr_app.cpp~  mlr_engine.cpp  mlr_main.cpp  mlr_sgd_solver.hpp
app/rand_forest/: CMakeLists.txt  Makefile  ReadMe.md
app/rand_forest/dataset/: iris.train
app/rand_forest/script/: kill.py  launch.py.template  launch_on_yarn.py  run_local.py.template
app/rand_forest/src/: decision_tree.cpp  decision_tree.hpp  rand_forest.cpp  rand_forest.hpp  rand_forest_engine.cpp  rand_forest_main.cpp  split_finder.cpp  split_finder.hpp  utils.hpp
app/sparsecoding/: CMakeLists.txt  Makefile
app/sparsecoding/script/: kill.py  launch.py  make_synth_data.py  run_local.py
app/sparsecoding/src/: SCEngine.cpp  SCEngine.hpp  matrix_loader.cpp  matrix_loader.hpp  sparsecoding_main.cpp
src/: CMakeLists.txt  petuum.mk
src/backup/: consistency_controller.hpp  consistency_policy.hpp  op_log_manager.hpp  pcqueue.hpp  row_request_mgr.cpp  row_request_mgr.hpp  utils.cpp
src/backup/comm_handler/: comm_handler.cpp  comm_handler.hpp  msgtypes.hpp  zmq_util.cpp  zmq_util.hpp
src/backup/proxy/: client_proxy.hpp  protocol.hpp  server_proxy.hpp  server_proxy_mt.hpp  table_partitioner.cpp  table_partitioner.hpp
src/backup/server.old/: server.hpp  server_exec_float.cpp  server_exec_float_mt.cpp  server_exec_int.cpp  server_exec_int_mt.cpp  server_mt.hpp
src/backup/stats/: stats.cpp  stats.hpp
src/backup/storage.old/: concurrent_row_storage.hpp  lru_buffer.hpp  lru_concurrent_storage.hpp  lru_eviction_logic.hpp  lru_row_storage.hpp  row_interface.hpp  row_storage.hpp  row_storage_factory.hpp  simple_row_storage.hpp  thread_safe_lru_row_storage.hpp
src/experimental/: petuum_architecture.hpp  row_state_table.hpp
src/experimental/petuum/: common.hpp  consistency_policy.hpp  table_group.hpp  tablet_storage.hpp  user_table.hpp
src/io/: general_fstream.cpp  general_fstream.hpp  hdfs.cpp  hdfs.hpp
src/local_scheduler/: delta_sampler.cpp  delta_sampler.hpp  local_scheduler.cpp  local_scheduler.hpp
src/main/java/: log4j2.xml
src/ml/feature/: dense_feature.hpp  sparse_feature.hpp
src/ml/include/: ml.hpp
src/ml/util/: data_loading.cpp  data_loading.hpp  math_util.cpp  math_util.hpp  metafile_reader.cpp  workload_manager.hpp
src/petuum_ps/client/: client_row.cpp  client_row.hpp  client_table.cpp  client_table.hpp  oplog_serializer.hpp  row_metadata.hpp  serialized_row_reader.hpp  ssp_client_row.hpp  table_group.cpp  table_group.hpp  thread_table.cpp  thread_table.hpp
src/petuum_ps/comm_bus/: comm_bus.cpp  comm_bus.hpp  zmq_util.cpp
src/petuum_ps/comm_handler/: comm_handler.cpp  comm_handler.hpp  msgtypes.hpp  zmq_util.cpp  zmq_util.hpp
src/petuum_ps/consistency/: abstract_consistency_controller.hpp  consistency_controller.hpp  consistency_policy.hpp  op_log_manager.hpp  ssp_aggr_consistency_controller.cpp  ssp_aggr_value_consistency_controller.cpp  ssp_aggr_value_consistency_controller.hpp  ssp_consistency_controller.cpp  ssp_consistency_controller.hpp  ssp_push_append_only_consistency_controller.hpp  ssp_push_consistency_controller.cpp  ssp_push_consistency_controller.hpp
src/petuum_ps/include/: abstract_row.hpp  configs.hpp  petuum_ps.hpp  row_access.hpp  table.hpp  table_group.hpp  table_row.hpp
src/petuum_ps/oplog/: abstract_oplog.hpp  append_only_oplog.hpp  append_only_oplog_partition.cpp  append_only_oplog_partition.hpp  create_row_oplog.cpp  create_row_oplog.hpp  dense_oplog.cpp  dense_oplog.hpp  meta_row_oplog.hpp  oplog.hpp  oplog_index.cpp  oplog_index.hpp  oplog_partition.cpp  (+6 more)
src/strads/: CMakeLists.txt  INSTALL  Makefile  README  basectx.hpp  binaryio.cpp  binaryio.hpp  defns.mk  dpartitioner.cpp  dpartitioner.hpp  getcorr.cpp  getcorr.hpp  iohandler.cpp  iohandler.hpp  main.cpp  ooc.cpp  options.cpp  options.hpp  run-nosched.py  run.py  sched-delta.cpp  sched-delta.hpp  scheduler-bg-common.cpp  scheduler-bg.hpp  skeleton.py  spmat.cpp  spmat.hpp  strads-queue.cpp  strads-queue.hpp  syscom.cpp  syscom.hpp  systemmacro.hpp  threadctx.hpp  usercom.cpp  utility.cpp  utility.hpp
src/yarn/: README.md  build.gradle  gradle.properties.template
(+1405 files in other folders)
